# test-img-streaming

client/: .gitignore  Library.cpp  Library.h  README.md
client/java/: in_derros_jni_UDPStreamer.h  legacy.cpp
client/java/in/derros/jni/: UDPStreamer.java
server/: CMakeLists.txt  Library.cpp
server/java/: in_derros_jni_UDPStreamer.h
server/java/in/derros/jni/: UDPStreamer.java
